# dops_server

./: .gitignore  .pre-commit-config.yaml  helpers.py  main.py  models.py  pyproject.toml  send_email.py
api/: files.py
db/: db_setup.py
db/models/: activity.py  drawing.py  issue.py  list.py  models.py  ref_doc.py  staff.py  stage.py  task.py  user.py  value.py
