[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ebashirli <ebashirli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"
pywin32 = "^304"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
